server logging add

--- a/fluentd/conf/fluent.conf
+++ b/fluentd/conf/fluent.conf
@@ -11,16 +11,36 @@
 
 
 <match minio.audit.log>
+  @type copy
+  <store>
+    @type elasticsearch
+    host elasticsearch
+    port 9200
+    user elastic
+    password admin123
+    index_name minio_audit_log
+    type_name _doc
+    <buffer>
+      @type memory
+      flush_mode interval
+      flush_interval 1s
+      chunk_limit_size 2m
+      queue_limit_length 8
+    </buffer>
+  </store>
+  <store>
+    @type stdout
+  </store>
+</match>
+
+<match minio.server.log>
   @type elasticsearch
   host elasticsearch
   port 9200
   user elastic
   password admin123
-  logstash_format true
-  logstash_prefix fluentd
-  logstash_dateformat %Y%m%d
-  verify_es_version_at_startup false
-  default_elasticsearch_version 7
+  index_name minio_server_log
+  type_name _doc
   <buffer>
     @type memory
     flush_mode interval
