--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,10 @@ services:
     environment:
       MINIO_ROOT_USER: minio
       MINIO_ROOT_PASSWORD: minio123
-      MINIO_AUDIT_WEBHOOK_ENABLE: "on"
-      MINIO_AUDIT_WEBHOOK_ENDPOINT: http://fluentd:9880/minio/audit/log
+      MINIO_AUDIT_WEBHOOK_ENABLE_DRZ: "on"
+      MINIO_AUDIT_WEBHOOK_ENDPOINT_DRZ: http://fluentd:9880/minio/audit/log
+      MINIO_LOGGER_WEBHOOK_ENABLE_DRZ: "on"
+      MINIO_LOGGER_WEBHOOK_ENDPOINT_DRZ: http://fluentd:9880/minio/server/log
     command: server /data --console-address ":9001"
     ports:
       - 9000:9000
@@ -23,7 +25,7 @@ services:
       - 9880:9880
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.7
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.13.1
     environment:
       - "discovery.type=single-node"
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
