--- a/fluentd/conf/fluent.conf
+++ b/fluentd/conf/fluent.conf
@@ -9,7 +9,6 @@
   </parse>
 </source>
 
-
 <match minio.audit.log>
   @type copy
   <store>
@@ -26,7 +25,16 @@
       flush_interval 1s
       chunk_limit_size 2m
       queue_limit_length 8
+      retry_type exponential_backoff
+      retry_wait 2s
+      retry_max_interval 30s
+      retry_max_times 3
     </buffer>
+    <secondary>
+      @type secondary_file
+      basename dump.${chunk_id}
+      directory /host_dir/minio-audit-log/secondary/
+    </secondary>
   </store>
   <store>
     @type stdout
@@ -49,4 +57,3 @@
     queue_limit_length 8
   </buffer>
 </match>
-
