--- a/fluentd/conf/fluent.conf
+++ b/fluentd/conf/fluent.conf
@@ -6,6 +6,9 @@
   keepalive_timeout 10s
   <parse>
     @type json
+    time_key time
+    time_format %Y-%m-%dT%H:%M:%S.%NZ
+    keep_time_key true
   </parse>
 </source>
 
